--- a/ui/src/app/features/auth/login/login.component.scss
+++ b/ui/src/app/features/auth/login/login.component.scss
@@ -117,4 +117,10 @@ button {
       text-decoration: underline;
     }
   }
+}
+
+.language-switcher-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 } 
