Add locations section on Dashboard

--- a/ui/admin/src/app/features/dashboard/dashboard.component.html
+++ b/ui/admin/src/app/features/dashboard/dashboard.component.html
@@ -6,5 +6,7 @@
       <h2>{{ tenantDetails.name }}</h2>
     </div>
     <p>{{ 'dashboard.subtitle' | translate }}</p>
+
+    <app-locations *ngIf="tenantDetails" [tenantId]="tenantDetails.id"></app-locations>
   </div>
 </div> 
