Fix text at the bottom of registration page

--- a/ui/admin/src/app/features/registration/registration.component.html
+++ b/ui/admin/src/app/features/registration/registration.component.html
@@ -94,7 +94,7 @@
       </button>
 
       <p class="login-link">
-        {{ 'login.signup.text' | translate }} <a routerLink="/login">{{ 'login.signup.link' | translate }}</a>
+        {{ 'registration.login.text' | translate }} <a routerLink="/login">{{ 'registration.login.link' | translate }}</a>
       </p>
     </form>
   </div>
