--- a/ui/client/src/app/login/login.component.scss
+++ b/ui/client/src/app/login/login.component.scss
@@ -84,6 +84,16 @@ h2 {
   text-align: center;
 }
 
+.info-message {
+  background-color: #e8eaf6;
+  color: #3f51b5;
+  border-radius: 4px;
+  padding: 12px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 14px;
+}
+
 .signup-link {
   margin-top: 20px;
   text-align: center;
