--- a/ui/client/src/app/login/login.component.html
+++ b/ui/client/src/app/login/login.component.html
@@ -8,37 +8,37 @@
       </mat-card-header>
 
       <mat-card-content>
-        <h2>Welcome Back</h2>
-        <p class="subtitle">Sign in to your account</p>
+        <h2>{{ 'login.title' | translate }}</h2>
+        <p class="subtitle">{{ 'login.subtitle' | translate }}</p>
         
         <div *ngIf="hasPendingInvitation" class="info-message">
-          Sign in to join the sport club you were invited to
+          {{ 'login.invitationMessage' | translate }}
         </div>
         
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
           <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email" type="email" placeholder="Enter your email">
+            <mat-label>{{ 'login.form.email.label' | translate }}</mat-label>
+            <input matInput formControlName="email" type="email" [placeholder]="'login.form.email.placeholder' | translate">
             <mat-icon matSuffix>email</mat-icon>
             <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
-              Email is required
+              {{ 'login.form.email.required' | translate }}
             </mat-error>
             <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
-              Please enter a valid email address
+              {{ 'login.form.email.invalid' | translate }}
             </mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Password</mat-label>
-            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" placeholder="Enter your password">
+            <mat-label>{{ 'login.form.password.label' | translate }}</mat-label>
+            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" [placeholder]="'login.form.password.placeholder' | translate">
             <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
               <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-              Password is required
+              {{ 'login.form.password.required' | translate }}
             </mat-error>
             <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
-              Password must be at least 6 characters
+              {{ 'login.form.password.minLength' | translate }}
             </mat-error>
           </mat-form-field>
 
@@ -48,11 +48,11 @@
 
           <button mat-flat-button color="primary" type="submit" class="login-button" [disabled]="loginForm.invalid || isLoading">
             <mat-spinner diameter="20" *ngIf="isLoading"></mat-spinner>
-            <span *ngIf="!isLoading">Sign In</span>
+            <span *ngIf="!isLoading">{{ 'login.form.submit' | translate }}</span>
           </button>
 
           <div class="signup-link">
-            Don't have an account? <a routerLink="/signup">Sign up</a>
+            {{ 'login.signup.text' | translate }} <a routerLink="/signup">{{ 'login.signup.link' | translate }}</a>
           </div>
         </form>
       </mat-card-content>
