--- a/src/main/resources/templates/email/en/client-invitation.html
+++ b/src/main/resources/templates/email/en/client-invitation.html
@@ -42,7 +42,7 @@
 
 <div class="footer">
     <p>This email was sent automatically. Please do not reply to this email.</p>
-    <p>&copy; 2025 FitTrack CRM. All rights reserved.</p>
+    <p>&copy; 2025 Fitny CRM. All rights reserved.</p>
 </div>
 </body>
 </html> 
