--- a/ui/admin/src/app/features/registration/registration.component.scss
+++ b/ui/admin/src/app/features/registration/registration.component.scss
@@ -164,3 +164,9 @@ button {
     }
   }
 }
+
+.language-switcher-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
