--- a/ui/admin/src/app/features/auth/login/login.component.html
+++ b/ui/admin/src/app/features/auth/login/login.component.html
@@ -1,9 +1,8 @@
 <div class="login-container">
   <div class="login-card">
-<!--    Uncomment to add language switcher -->
-<!--    <div class="language-switcher-container">-->
-<!--      <app-language-switcher></app-language-switcher>-->
-<!--    </div>-->
+    <div class="language-switcher-container">
+      <app-language-switcher></app-language-switcher>
+    </div>
     <h2>{{ 'login.title' | translate }}</h2>
     <p class="subtitle">{{ 'login.subtitle' | translate }}</p>
 
